--- a/stylesheet/css/PITCHME.css
+++ b/stylesheet/css/PITCHME.css
@@ -1,5 +1,4 @@
-#lastslide {
-	background: url('../LastSlide.png') no-repeat;
-	position: relative;
-	z-index: 5;
+section:last-child {
+	background: url('../LastSlide.png') no-repeat, url('../Brainzzz.png') no-repeat;
+	background-size: cover, cover;
 }
