--- a/css/PITCHME.css
+++ b/css/PITCHME.css
@@ -1,4 +1,4 @@
-section:last-child {
+.slides section:last-child {
 	background: url('../images/LastSlide.png') no-repeat, url('../images/Brainzzz.png') no-repeat;
 	background-size: cover, cover;
 }
