--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -1,14 +1,14 @@
 .reveal .slides section:last-child {
-    background: url('../images/LastSlide.png') no-repeat, url('../images/Brainzzz.png') no-repeat;
+    background: url('../../images/LastSlide.png') no-repeat, url('../images/Brainzzz.png') no-repeat;
     background-size: cover, cover;
 }
 
 .reveal.slides .slides section:last-child {
-    background: url('../images/LastSlide.png') no-repeat, url('../images/Brainzzz.png') no-repeat;
+    background: url('../../images/LastSlide.png') no-repeat, url('../images/Brainzzz.png') no-repeat;
     background-size: cover, cover;
 }
 
 .reveal.slides:last-child {
-    background: url('../images/LastSlide.png') no-repeat, url('../images/Brainzzz.png') no-repeat;
+    background: url('../../images/LastSlide.png') no-repeat, url('../images/Brainzzz.png') no-repeat;
     background-size: cover, cover;
 }
