--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -12,3 +12,8 @@
     background: url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/LastSlide.png') no-repeat, url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/Brainzzz.png') no-repeat;
     background-size: cover, cover;
 }
+
+.reveal .backgrounds .slide-background:last-child{
+    background: url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/LastSlide.png') no-repeat, url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/Brainzzz.png') no-repeat;
+    background-size: cover, cover;
+}
