--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -1,18 +1,16 @@
 .reveal .slides section:last-child {
-    background: url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/LastSlide.png') no-repeat, url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/Brainzzz.png') no-repeat;
-    background-size: cover, cover;
 }
 
 .reveal.slides .slides section:last-child {
-    background: url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/LastSlide.png') no-repeat, url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/Brainzzz.png') no-repeat;
-    background-size: cover, cover;
 }
 
 .reveal.slides:last-child {
-    background: url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/LastSlide.png') no-repeat, url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/Brainzzz.png') no-repeat;
-    background-size: cover, cover;
 }
 
+.reveal[data-background-transition=slide] > .backgrounds .slide-background:first-child{
+    background: url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/Background.png');
+    background-size: cover;
+}
 .reveal[data-background-transition=slide] > .backgrounds .slide-background:last-child{
     background: url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/LastSlide.png') no-repeat, url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/Brainzzz.png') no-repeat;
     background-size: cover, cover;
