--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -8,6 +8,10 @@
 }
 
 .reveal[data-background-transition=slide] > .backgrounds .slide-background:first-child{
+    background: url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/FirstSlide.png');
+    background-size: cover;
+}
+.reveal[data-background-transition=slide] > .backgrounds .slide-background{
     background: url('https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/Background.png');
     background-size: cover;
 }
