--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -23,3 +23,13 @@
                 url(https://raw.githubusercontent.com/Elaniobro/ForkPPM/master/images/Brainzzz.png) no-repeat;
     background-size: contain, cover;
 }
+
+/* Font */
+.reveal h1 {
+    text-shadow: 1px 1px 2px rgba(150, 150, 150, 0.85);
+    color: #FFFFFF;
+    -webkit-text-stroke: 1px;
+    -moz-text-stroke: 1px;    
+    -webkit-text-stroke-color: #666666;
+    -moz-text-stroke-color: #666666;
+}
