--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -25,11 +25,27 @@
 }
 
 /* Font */
-.reveal h1 {
+.reveal h1,
+.reveal h2 {
     text-shadow: 1px 1px 2px rgba(150, 150, 150, 0.85);
     color: #FFFFFF;
     -webkit-text-stroke: 1px;
     -moz-text-stroke: 1px;    
     -webkit-text-stroke-color: #666666;
     -moz-text-stroke-color: #666666;
+}
+
+.reveal a {
+    color: #E80C0D;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.reveal a:hover,
+.reveal a:focus {
+    color: #900007;
+}
+
+.reveal a:visited{
+    color: #E80C0D;
 }
