--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -27,8 +27,8 @@
 /* Font */
 .reveal h1,
 .reveal h2 {
-    text-shadow: 1px 1px 2px rgba(150, 150, 150, 0.85);
-    color: #FFFFFF;
+    /*text-shadow: 1px 1px 2px rgba(150, 150, 150, 0.85);*/
+    color: #000000;
     -webkit-text-stroke: 1px;
     -moz-text-stroke: 1px;    
     -webkit-text-stroke-color: #666666;
