--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -30,9 +30,13 @@
     /*text-shadow: 1px 1px 2px rgba(150, 150, 150, 0.85);*/
     color: #000000;
     -webkit-text-stroke: 1px;
-    -moz-text-stroke: 1px;    
-    -webkit-text-stroke-color: #666666;
-    -moz-text-stroke-color: #666666;
+    -moz-text-stroke: 1px;
+    -webkit-text-stroke-color: rgba(255, 255, 255, 0.85);
+    -moz-text-stroke-color: rgba(255, 255, 255, 0.85);
+}
+
+.reveal h1 {
+    font-size: 2em;
 }
 
 .reveal a {
