--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -34,6 +34,15 @@
 .reveal h1 {
     font-size: 2em;
 }
+.reveal h2{
+    font-size: 1.0em;
+}
+.reveal h2#ppm-december-7-2017 {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
 
 .reveal a {
     color: #E80C0D;
