--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -63,6 +63,11 @@
     margin: 20px 100px;
 }
 
+.reveal ul {
+    width: 100%;
+    padding: 0 50px;
+    text-align: left;
+}
 /* img */
 .reveal section img {
     border: 1px solid #AAAAAA;
